deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: macvice-website
  labels:
    app.kubernetes.io/name: macvice-website
    app.kubernetes.io/component: website
spec:
  ingressClassName: traefik
  rules:
    - host: macvice.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: macvice-website
                port:
                  name: http
    - host: www.macvice.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: macvice-website
                port:
                  name: http
